[package]
name = "sparse_complex"
version = "0.1.2"
authors = ["Felipe M. dos S. Monteiro"]
edition = "2018"
license = "MIT"
description = "An abstraction layer for sparse21 that adds support for complex sparse matrices."
repository = "https://github.com/felipemarkson/sparse_complex"
readme = "README.md"
categories = ["data-structures", "mathematics", "science"]
keywords = ["linear-algebra", "sparse", "complex", "algebra", "matrix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse21 = "0.2.1"
approx = "0.4"
num ="0.4.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
tar = "0.4"
libc = "0.2.0"
cc ="1"