[package]
name = "sparse_complex"
version = "0.1.4"
authors = ["Felipe M. dos S. Monteiro"]
edition = "2021"
license = "MIT"
description = "A simple solver for complex sparse matrices."
repository = "https://github.com/felipemarkson/sparse_complex"
readme = "README.md"
categories = ["data-structures", "mathematics", "science"]
keywords = ["linear-algebra", "sparse", "complex", "algebra", "matrix"]

[dependencies]
approx = "0.5"
num ="0.4.0"

[build-dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true}
flate2 = "1.0"
tar = "0.4"
libc = "0.2.0"
cc ="1"
curl = "0.4"

[dependencies.num-traits]
version = "0.2"
default-features = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]
features = [ "openssl" ]